# Rust-Machine-Learning

./: .gitignore  Cargo.toml  K-Means-Clustering.ipynb  K-Nearest-Neightbor.ipynb  README.md  pyproject.toml  requirements.txt  requirements_linux.txt  requirements_windows.txt
.ipynb_checkpoints/: K-Means-Clustering-checkpoint.ipynb  K-Nearest-Neightbor-checkpoint.ipynb
benches/: benchmarks.rs  cnn_bench.rs  matrix_bench.rs  nn_bench.rs
data/: .gitignore  iris.data  kmeans-dataset.csv  winequality-red.csv
matrix_lib/: Cargo.toml  build.rs  build_kernels.sh
matrix_lib/cuda_kernels/: .gitignore  CMakeLists.txt  cuda_kernels.cu  cuda_kernels.cuh
matrix_lib/cuda_kernels/benchmarks/: bench.sh  main  main.cpp  main.cu
matrix_lib/cuda_kernels/src/: cuda_kernels.cu  cuda_kernels.cuh
matrix_lib/src/: bindings.rs  lib.rs  lib_cpu.rs  matrix.rs  matrix_cpu.rs  matrix_tests.rs
matrix_lib/tests/: matrix_tests.rs
notebook_executables/: convert_all_notebooks.py  convert_notebook.py
notebooks/: AdaBoost.ipynb  Basic-Neural-Network-Regression.ipynb  Basic-Neural-Network.ipynb  Convolutional-Neural-Network.ipynb  Convolutional-Neural-Network.py  Decision-Tree.ipynb  Gradient-Descent.ipynb  GradientBoost.ipynb  K-Means-Clustering-Python.ipynb  K-Means-Clustering.ipynb  K-Nearest-Neighbor.ipynb  K-Nearest-Neightbor.ipynb  Naive-Bayes.ipynb  Regression-Tree.ipynb  Simplified-Convolutional-Neural-Network.ipynb  XGBoost.ipynb  copy_notebooks_as_py.py  syed_ml_lib.py
notebooks/profiling_py/: AdaBoost.py  Basic-Neural-Network-Regression.py  Basic-Neural-Network.py  Convolutional-Neural-Network.py  Decision-Tree.py  Gradient-Descent.py  GradientBoost.py  K-Means-Clustering-Python.py  K-Means-Clustering.py  K-Nearest-Neighbor.py  Naive-Bayes.py  Regression-Tree.py  Simplified-Convolutional-Neural-Network.py  XGBoost.py
src/: adaboost.rs  basic_neural_network.rs  basic_stats.rs  convolutional_neural_network.rs  convolutional_neural_network_py_interface.rs  cpu_basic_neural_network.rs  decision_tree.rs  gradient_descent.rs  gradientboost.rs  image_util.rs  k_means.rs  k_nearest_neighbor.rs  lib.rs  matrix_lib.rs  naive_bayes.rs  optimizers.rs  packed_optimizers.rs  py_util.rs  regression_tree.rs  simplified_convolutional_neural_network.rs  simplified_convolutional_neural_network_tensor.rs  xgb.rs
tensor_lib/: Cargo.toml  build.rs  build_kernels.bat  build_kernels.sh
tensor_lib/cuda_kernels/: CMakeLists.txt
tensor_lib/cuda_kernels/benchmarks/: bench.sh  main.cpp  profile.ncu-rep
tensor_lib/cuda_kernels/src/: cuda_exec_memory_manager.cu  cuda_exec_memory_manager.cuh  cuda_kernels.cu  cuda_kernels.cuh  err_check_util.cu  types.cuh
tensor_lib/src/: cuda_bindings.rs  lib.rs  matrix.rs  matrix_cpu.rs  matrix_tests.rs  tensor.rs
tests/: basic_nn_tests.rs  dependency_tests.rs  matrix_tests.rs  simplified_cnn_tests.rs
tests/cnn_tests_util/: cnn_test_conv_layer.rs  cnn_test_expected_fc_output.rs  cnn_test_expected_feed_forward_output.rs  cnn_test_expected_flattened.rs  cnn_test_expected_post_backprop_conv_weights.rs  cnn_test_expected_post_backprop_fc_bias.rs  cnn_test_expected_post_backprop_fc_input_gradient.rs  cnn_test_expected_post_backprop_fc_weight.rs  cnn_test_expected_post_backprop_unflattened_fc_gradient.rs  cnn_test_expected_softmax_gradient.rs  cnn_test_expected_softmax_output.rs  cnn_test_initial_fc_weights.rs  cnn_test_initial_fc_weights.txt  cnn_test_input.rs  cnn_test_post_backprop_conv_weights_i.txt  cnn_test_post_backprop_fc_bias_i.txt  cnn_test_post_backprop_fc_input_gradient.txt  cnn_test_post_backprop_fc_weight.txt  mod.rs
