[package]
name = "Rust-Machine-Learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "Rust_Machine_Learning"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
rand = "0.8.5"
itertools = "0.10.5"
ordered-float = "3.4.0"
num = "0.4.0"
statrs = "0.16.0"
