[package]
name = "rust-machine-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_machine_learning"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
rand = "0.8.5"
itertools = "0.10.5"
ordered-float = "3.4.0"
num = "0.4.0" 
statrs = "0.16.0"
matrix_lib = { path = "./matrix_lib" }
image = "0.24.7"
rayon = "1.8.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "matrix_bench"
harness = false
