[package]
name = "rust-machine-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_machine_learning"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module"] }
rand = "0.8.5"
itertools = "0.12.1"
ordered-float = "4.2.0"
num = "0.4.1" 
statrs = "0.16.0"
tensor_lib = { path = "./tensor_lib" }
image = "0.24.8"
rayon = "1.8.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "matrix_bench"
harness = false

[[bench]]
name = "cnn_bench"
harness = false

[[bench]]
name = "nn_bench"
harness = false

[profile.release-with-debug]
inherits = "release"
debug = true