[build-system]
requires = ["maturin>=0.14"]
build-backend = "maturin"

[project]
name = "rust-machine-learning"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


