[package]
name = "tensor_lib"
version = "0.1.0"
edition = "2021"

[profile.test] 
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.1"
itertools = "0.12.1"
statrs = "0.16.0"
rand = "0.8.5"

[build-dependencies]
cc = "1.0.83"
